# hnefatafl-copenhagen

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  Cargo.toml  LICENSE-MIT  Makefile  PKGBUILD  README.md  build.rs  hnefatafl.html  hnefatafl.service  org.hnefatafl.hnefatafl_client.yml  todo.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: clippy.yml  fmt.yml  tests.yml  zizmor.yml
arch/: PKGBUILD
benches/: hnefatafl_rs.rs
debian/: build.sh  changelog  debian.yml  hnefatafl-ai-00-attacker.service  hnefatafl-client.1.dj  hnefatafl-client.desktop  hnefatafl-server-full.1.dj
examples/: hnefatafl-client.rs  king_2_256x256.rgba
flatpak/: cargo-sources.json  hnefatafl_client.metainfo.xml  org.hnefatafl.hnefatafl-client.yml  org.hnefatafl.hnefatafl_client.yml
html-client/: index.html
locales/: app.yml
src/: accounts.rs  ai.rs  board.rs  color.rs  draw.rs  game.rs  game_record.rs  glicko.rs  lib.rs  main.rs  message.rs  move_.rs  play.rs  rating.rs  role.rs  server_game.rs  smtp.rs  space.rs  status.rs  time.rs
tests/: copenhagen.csv  test_hnefatafl_rs.rs
website/: Makefile  book.toml  website.sh
website/src/: 404.md  README.dj  SUMMARY.md  discourse.dj  facebook.dj  help_me.dj  install.dj  review-game.dj  rules.dj  subscribe.dj  unsubsribe.dj
wix/: main.wxs
