[package]
name = "hnefatafl-copenhagen"
version = "0.6.1"
authors = ["David Campbell <dcampbell24@gmail.com>"]
edition = "2021"
rust-version =  "1.81"
description = "Copenhagen Hnefatafl engine similar to the Go Text Protocol."
documentation = "https://docs.rs/hnefatafl-copenhagen/"
readme = "README.md"
homepage = "https://hnefatafl.org"
repository = "https://github.com/dcampbell24/hnefatafl-copenhagen"
license = "MIT OR Apache-2.0"
keywords = ["copenhagan", "hnefatafl"]
categories = ["game-engines", "games"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version ="4", features = ["derive"] }
csv = "1"
dirs = "6"
env_logger = "0.11"
log = "0.4"
# rayon = "1"
ron = "0.8"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_with = "3"

# client only
futures = { version = "0.3", optional = true }
iced = { version = "0.13", features = ["smol"], optional = true }
rodio = { version = "0.20", optional = true }
webbrowser = { version = "1", optional = true }

# server only
argon2 = { version = "0.5", optional = true }
password-hash = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }

# tests only
nix = { version = "0.29.0", features = ["signal"], optional = true }

[build-dependencies]
dirs = "6"

[features]
client = ["dep:futures", "dep:iced", "dep:rodio", "dep:webbrowser"]
server = ["dep:argon2", "dep:password-hash", "dep:rand"]
tests = ["dep:nix"]

[[bin]]
name = "hnefatafl-client"
required-features = ["client"]

[[bin]]
name = "hnefatafl-server-full"
required-features = ["server"]

[[bin]]
name = "hnefatafl-tests"
required-features = ["tests"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hnefatafl_rs"
harness = false

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
# restriction = "warn"
style = "deny"
suspicious = "deny"

multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
panic = "abort"

[package.metadata.deb]
copyright = "2025 David Lawrence Campbell"
maintainer = "David Campbell <dcampbell24@gmail.com>"
assets = [
    ["target/release/hnefatafl-server-full", "usr/bin/", "755"],
    ["hnefatafl.service", "lib/systemd/system/", "644"],
]
changelog = "debian/changelog"
section = "games"
