[package]
name = "hnefatafl-copenhagen"
version = "0.12.0"
authors = ["David Campbell <dcampbell24@gmail.com>"]
edition = "2021"
rust-version =  "1.79"
description = "Copenhagen Hnefatafl client, engine, and server."
documentation = "https://docs.rs/hnefatafl-copenhagen/"
readme = "README.md"
homepage = "https://hnefatafl.org"
repository = "https://github.com/dcampbell24/hnefatafl-copenhagen"
license = "MIT OR Apache-2.0"
keywords = ["board-game", "copenhagan", "hnefatafl", "tafl"]
categories = ["game-engines", "games"]
default-run = "hnefatafl-server-full"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version ="4", features = ["derive"] }
csv = "1"
dirs = "6"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
# rayon = "1"
ron = "0.8"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_with = "3"

# client only
futures = { version = "0.3", optional = true }
iced = { version = "0.13", features = ["smol"], optional = true }
rodio = { version = "0.20", optional = true }
webbrowser = { version = "1", optional = true }

# server only
argon2 = { version = "0.5", optional = true }
password-hash = { version = "0.5", optional = true }

[build-dependencies]
dirs = "6"

[features]
client = ["dep:futures", "dep:iced", "dep:rodio", "dep:webbrowser"]
server = ["dep:argon2", "dep:password-hash"]

[[bin]]
name = "hnefatafl-client"
required-features = ["client"]

[[bin]]
name = "hnefatafl-server-full"
required-features = ["server"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hnefatafl_rs"
harness = false

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
# restriction = "warn"
style = "deny"
suspicious = "deny"

multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
panic = "abort"

[package.metadata.deb]
copyright = "2025 David Lawrence Campbell"
maintainer = "David Campbell <dcampbell24@gmail.com>"
extended-description = "The engine is similar to the Go Text Protocol."
features = ["client", "server"]
assets = [
    ["debian/README.txt", "usr/share/doc/hnefatafl-copenhagen/", "644"],
    ["debian/hnefatafl-client.1.gz", "usr/share/man/man1/", "644"],
    ["debian/hnefatafl-server-full.1.gz", "usr/share/man/man1/", "644"],
    ["debian/hnefatafl-client.desktop", "usr/share/applications/", "644"],
    ["debian/hnefatafl-ai-00-attacker.service", "lib/systemd/system/", "644"],
    ["debian/hnefatafl-ai-01-defender.service", "lib/systemd/system/", "644"],
    ["debian/hnefatafl.service", "lib/systemd/system/", "644"],
    ["icons/king_16x16.png", "usr/share/icons/hicolor/16x16/apps/hnefatafl-client.png", "644"],
    ["icons/king_22x22.png", "usr/share/icons/hicolor/22x22/apps/hnefatafl-client.png", "644"],
    ["icons/king_24x24.png", "usr/share/icons/hicolor/24x24/apps/hnefatafl-client.png", "644"],
    ["icons/king_32x32.png", "usr/share/icons/hicolor/32x32/apps/hnefatafl-client.png", "644"],
    ["icons/king_42x42.png", "usr/share/icons/hicolor/42x42/apps/hnefatafl-client.png", "644"],
    ["icons/king_64x64.png", "usr/share/icons/hicolor/64x64/apps/hnefatafl-client.png", "644"],
    ["icons/king_128x128.png", "usr/share/icons/hicolor/128x128/apps/hnefatafl-client.png", "644"],
    ["sound/capture.ogg", "usr/share/hnefatafl-copenhagen/capture.ogg", "644"],
    ["sound/game_over.ogg", "usr/share/hnefatafl-copenhagen/game_over.ogg", "644"],
    ["sound/move.ogg", "usr/share/hnefatafl-copenhagen/move.ogg", "644"],
    ["target/release/hnefatafl-ai", "usr/games/", "755"],
    ["target/release/hnefatafl-client", "usr/games/", "755"],
    ["target/release/hnefatafl-server-full", "usr/games/", "755"],
]
changelog = "debian/changelog"
section = "games"

[package.metadata.docs.rs]
features = ["client", "server"]
