[package]
name = "hnefatafl-copenhagen"
version = "1.0.0"
authors = ["David Campbell <dcampbell24@gmail.com>"]
edition = "2024"
rust-version =  "1.85.1"
description = "Copenhagen Hnefatafl client, engine, and server."
documentation = "https://docs.rs/hnefatafl-copenhagen/"
readme = "README.md"
homepage = "https://hnefatafl.org"
repository = "https://github.com/dcampbell24/hnefatafl-copenhagen"
license = "MIT OR Apache-2.0"
keywords = ["board-game", "copenhagan", "hnefatafl", "tafl"]
categories = ["game-engines", "games"]
default-run = "hnefatafl-server-full"

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
default-features = false
features = ["wgpu", "tiny-skia", "web-colors", "thread-pool"]
optional = true

[dependencies]
anyhow = "1"
# bincode = "=2.0.0-rc.3"
# bincode_derive = "=2.0.0-rc.3"
# burn = { version = "0.16", features = ["train", "wgpu", "vision"] }
chrono = "0.4"
clap = { version ="4", features = ["derive"] }
csv = "1"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
# rayon = "1"
ron = "0.10"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_with = "3"

# client only
futures = { version = "0.3", optional = true }
rodio = { version = "0.20", optional = true }
webbrowser = { version = "1", features = ["hardened"], optional = true }

# server only
argon2 = { version = "0.5", optional = true }
dirs = { version = "6", optional = true }
lettre = { version = "0.11", optional = true }
password-hash = { version = "0.5", optional = true }

[features]
default = ["client", "server", "sound", "timer", "www"]
client = ["dep:futures", "dep:iced"]
icon_2 = []
server = ["dep:argon2", "dep:dirs", "dep:lettre", "dep:password-hash"]
sound = ["dep:rodio"]
timer = ["iced/smol"]
www = ["dep:webbrowser"]

[[bin]]
name = "hnefatafl-client"
required-features = ["client"]

[[bin]]
name = "hnefatafl-server-full"
required-features = ["server"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hnefatafl_rs"
harness = false

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
# restriction = "warn"
style = "deny"
suspicious = "deny"

multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
panic = "abort"

# To update the icon cache: rm ~/.cache/icon-cache.kcache
# Then log out and in.
[package.metadata.deb]
copyright = "2025 David Lawrence Campbell"
maintainer = "David Campbell <dcampbell24@gmail.com>"
extended-description = "The engine is similar to the Go Text Protocol."
features = ["client", "server", "sound", "timer", "www"]
assets = [
    ["icons/king_16x16.png", "usr/share/icons/hicolor/16x16/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_22x22.png", "usr/share/icons/hicolor/22x22/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_24x24.png", "usr/share/icons/hicolor/24x24/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_32x32.png", "usr/share/icons/hicolor/32x32/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_42x42.png", "usr/share/icons/hicolor/42x42/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_64x64.png", "usr/share/icons/hicolor/64x64/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_128x128.png", "usr/share/icons/hicolor/128x128/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_256x256.png", "usr/share/icons/hicolor/256x256/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["packages/README.txt", "usr/share/doc/hnefatafl-copenhagen/", "644"],
    ["packages/hnefatafl-ai.1.gz", "usr/share/man/man1/", "644"],
    ["packages/hnefatafl-client.1.gz", "usr/share/man/man1/", "644"],
    ["packages/hnefatafl-server-full.1.gz", "usr/share/man/man1/", "644"],
    ["packages/hnefatafl-client.desktop", "usr/share/applications/", "644"],
    ["packages/hnefatafl-ai-00-attacker.service", "lib/systemd/system/", "644"],
    ["packages/hnefatafl-ai-01-defender.service", "lib/systemd/system/", "644"],
    ["packages/hnefatafl.service", "lib/systemd/system/", "644"],
    ["target/release/hnefatafl-ai", "usr/games/", "755"],
    ["target/release/hnefatafl-client", "usr/games/", "755"],
    ["target/release/hnefatafl-server-full", "usr/games/", "755"],
]
changelog = "packages/changelog"
section = "games"
